tests/cases/errors/parser/stmt_impl2.vnm
struct Person {
  name;
  age;
}

impl Person [
  fn say_hi(self, name) {
    print "Hello " ++ name ++ ".  I'm " ++ self.name ++ ".";
    yield 1;
    return 0;
  }
}

fn main() {
  return 0;
}

main();
